# graphemy

./: .gitignore  .readthedocs.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: pipeline.yml
docs/: index.md
docs/Guide/: Models.md  Relationships.md  Security.md  Utilities.md
docs/Guide/Advanced tutorial/: Security.md
docs/Guide/Tutorial/: Models.md  Relationships.md
docs/Tutorial/: Basic Usage.md
docs/Tutorial/Guide/: Using models.md
docs/api/: DL.md  Imports.md  Router.md  Setup.md  models.md  services.md
docs/stylesheets/: extra.css
docs/templates/: instalation.md
examples/: band.py  city.py  song.py  word.py
examples/band/: band.py
examples/basic/: main.py
examples/event/: event.py
examples/music/: main.py
examples/music/models/: album.py  music.py
examples/query/: main.py
examples/query/models/: account.py  bank.py
examples/song/: song.py
examples/tutorial/: main.py  models.py
examples/tutorial/auth/: main.py  models.py
examples/tutorial/basic/: main.py  models.py
examples/tutorial/models/: account.py  album.py  band.py  bank.py  customer.py  event.py  member.py  music.py  presentation.py  services.py  transaction.py
examples/tutorial/relationship/: main.py  models.py
graphemy/: __init__.py  dl.py  models.py  router.py  services.py  setup.py
graphemy/database/: operations.py  utils.py
graphemy/schemas/: generators.py  models.py
tests/: conftest.py  fixture.py  test_api.py  test_async.py  test_auth.py  test_basic.py  test_contains.py  test_date.py  test_erros.py  test_features.py  test_filter.py  test_models.py  test_multi.py  test_multi_key.py  test_multi_keys.py  test_mutation copy.py  test_mutation.py  test_pagination.py  test_permission.py  test_query.py  test_relationship.py  test_relationships.py  test_sort.py  test_tutorial.py  test_zother.py
