[tool.poetry]
name = "graphemy"
version = "1.0.0"
description = "A Python library for integrating SQLModel and Strawberry, providing a seamless GraphQL integration with FastAPI and advanced features for database interactions."
authors = ["Matheus Doreto <matheusdoreto.md@gmail.com>"]
readme = "README.md"
packages = [{include = "graphemy"}]
homepage = "https://github.com/MDoreto/graphemy"
documentation = "https://graphemy.readthedocs.io/en/latest/"
repository = "https://github.com/MDoreto/graphemy"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
]
[tool.poetry.urls]
"Documentation" = "https://graphemy.readthedocs.io/en/latest/"
"Repository" = "https://github.com/MDoreto/graphemy"
"Bug Tracker" = "https://github.com/MDoreto/graphemy/issues"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "0.0.18"
strawberry-graphql = {extras = ["debug-server"], version = "^0.229.1"}
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.0"
pytest-env = "^1.1.1"
aiosqlite = "^0.20.0"
gevent = "^24.2.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.24"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
mkdocs-macros-plugin = "^1.0.5"
jinja2 = "^3.1.2"
mdx-include = "^1.4.2"
pymdown-extensions = "^10.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."

[tool.coverage.run]
concurrency = ["thread","gevent"]

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
ex_basic = "uvicorn examples.tutorial.basic.main:app --reload --port 8001"
ex_dl = "uvicorn examples.tutorial.relationship.main:app --reload --port 8001"
lint = "blue . && isort ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=graphemy -vv -W ignore::DeprecationWarning"
post_test = "coverage html"
publish = "poetry publish --build"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    ]